# Infi_Advent_of_Code

./: CMakeLists.txt
dag01/: dag01.cpp  dag01.h
infi2024/: input.txt
